[package]
name = "tonic-derive-error"
description = "Macro-based error handling for Tonic"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/tonic-derive-error"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vaultie/tonic-derive-error"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
